--- a/klasy/klasa3.html
+++ b/klasy/klasa3.html
@@ -30,13 +30,13 @@
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
-      <tr onclick="window.location='rodzaj/podstrona.html';">
+      <tr onclick="window.location='../pliki/3G/';">
         <td>3G</td>
       </tr>
-      <tr onclick="window.location='rodzaj/3K.html';">
+      <tr onclick="window.location='../pliki/3K/';">
         <td>3K</td>
       </tr>
-      <tr onclick="window.location='rodzaj/3P.html';">
+      <tr onclick="window.location='../pliki/3P/';">
         <td>3P</td>
       </tr>
     </table>
