--- a/klasy/klasa4.html
+++ b/klasy/klasa4.html
@@ -30,13 +30,13 @@
 
   <div class="main">
     <table class="wyb_postaci" id="myTable">
-      <tr onclick="window.location='rodzaj/4G.html';">
+      <tr onclick="window.location='../pliki/4G/';">
         <td>4G</td>
       </tr>
-      <tr onclick="window.location='rodzaj/4K.html';">
+      <tr onclick="window.location='../pliki/4K/';">
         <td>4K</td>
       </tr>
-      <tr onclick="window.location='rodzaj/4P.html';">
+      <tr onclick="window.location='../pliki/4P/';">
         <td>4P</td>
       </tr>
     </table>
